feat: changed path for the logo, remoged site folder from the repo and added steps for local dev

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ nav:
     - Reference : https://liquality.github.io/chainabstractionlayer/
 theme:
     name: material
-    logo: ../assets/logo.png
+    logo: /assets/logo.png
     language: en  
     include_homepage_in_sidebar: false
     collapse_navigation: false
